--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,20 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="style.css"/>
     <title>Realtime Chat</title>
   </head>
   <body>
-    <h1>Welcome to Realtime Chat</h1>
+    <h1 class="title">Welcome to Realtime Chat</h1>
     <div class="main">
-      <div class="name"></div>
+      <div class="name">
+        <span><i class="far fa-user"></i></span>
+        <input type="text" 
+        class="name-input" 
+        id="name-input"
+        value="anomymous"
+        maxlength="20"/>
+      </div>
 
       <ul class="message-container" id="message-container">
         <li class="message-left">
