Set up websocket

--- a/public/index.html
+++ b/public/index.html
@@ -56,5 +56,8 @@
 
       <h3 class="clients-total" id="clients-total">Total clients: 2</h3>
     </div>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
