Implement sending message

--- a/public/index.html
+++ b/public/index.html
@@ -28,12 +28,12 @@
       <ul class="message-container" id="message-container">
         <li class="message-left">
           <p class="message">Lorem, ipsum.</p>
-          <span>bluebird 26 July 10:40</span>
+          <span>bluebird ● 26 July 10:40</span>
         </li>
 
         <li class="message-right">
           <p class="message">Lorem, ipsum.</p>
-          <span>bluebird 26 July 10:40</span>
+          <span>bluebird ● 26 July 10:40</span>
         </li>
 
         <li class="message-feedback">
@@ -54,10 +54,15 @@
         </button>
       </form>
 
-      <h3 class="clients-total" id="clients-total">Total clients: 2</h3>
     </div>
+    <h3 class="clients-total" id="clients-total">Total clients: 2</h3>
 
     <script src="/socket.io/socket.io.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.28.0/moment.min.js"
+      integrity="sha512-Q1f3TS3vSt1jQ8AwP2OuenztnLU6LwxgyyYOG1jgMW/cbEMHps/3wjvnl1P3WTrF3chJUWEoxDUEjMxDV8pujg=="
+      crossorigin="anonymous"
+    ></script>
     <script src="main.js"></script>
   </body>
 </html>
