--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       </div>
 
       <ul class="message-container" id="message-container">
-        <li class="message-left">
+        <!-- <li class="message-left">
           <p class="message">Lorem, ipsum.</p>
           <span>bluebird ● 26 July 10:40</span>
         </li>
@@ -38,7 +38,7 @@
 
         <li class="message-feedback">
           <p id="feedback" class="feedback">typing ...</p>
-        </li>
+        </li> -->
       </ul>
 
       <form id="message-form" class="message-form">
